// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures matrix-2x3 1`] = `
Immutable.List [
  Immutable.List [
    [
      false,
      "2",
    ],
    [
      false,
      "4",
    ],
    [
      false,
      "6",
    ],
  ],
  Immutable.List [
    [
      false,
      "10",
    ],
    [
      false,
      "12",
    ],
    [
      false,
      "14",
    ],
  ],
]
`;

exports[`fixtures matrix-colspan-1 1`] = `
Immutable.List [
  Immutable.List [
    [
      false,
      "1",
    ],
    [
      true,
      "1",
    ],
    [
      false,
      "3",
    ],
  ],
  Immutable.List [
    [
      false,
      "7",
    ],
    [
      false,
      "9",
    ],
    [
      false,
      "11",
    ],
  ],
]
`;

exports[`fixtures matrix-colspan-2 1`] = `
Immutable.List [
  Immutable.List [
    [
      false,
      "2",
    ],
    [
      true,
      "2",
    ],
    [
      true,
      "2",
    ],
  ],
  Immutable.List [
    [
      false,
      "6",
    ],
    [
      false,
      "8",
    ],
    [
      false,
      "10",
    ],
  ],
]
`;

exports[`fixtures matrix-colspan-3 1`] = `
Immutable.List [
  Immutable.List [
    [
      false,
      "2",
    ],
    [
      true,
      "2",
    ],
    [
      true,
      "2",
    ],
    [
      true,
      "2",
    ],
  ],
  Immutable.List [
    [
      false,
      "6",
    ],
    [
      false,
      "8",
    ],
    [
      false,
      "10",
    ],
    [
      false,
      "17",
    ],
  ],
]
`;

exports[`fixtures matrix-colspan-4 1`] = `
Immutable.List [
  Immutable.List [
    [
      false,
      "2",
    ],
    [
      false,
      "5",
    ],
    [
      true,
      "5",
    ],
    [
      true,
      "5",
    ],
    [
      false,
      "26",
    ],
  ],
  Immutable.List [
    [
      false,
      "9",
    ],
    [
      false,
      "11",
    ],
    [
      false,
      "13",
    ],
    [
      false,
      "16",
    ],
    [
      false,
      "19",
    ],
  ],
]
`;

exports[`fixtures matrix-multi-colspan 1`] = `
Immutable.List [
  Immutable.List [
    [
      false,
      "2",
    ],
    [
      true,
      "2",
    ],
    [
      true,
      "2",
    ],
    [
      true,
      "2",
    ],
    [
      false,
      "5",
    ],
    [
      true,
      "5",
    ],
  ],
]
`;

exports[`fixtures matrix-rowspan 1`] = `
Immutable.List [
  Immutable.List [
    [
      false,
      "2",
    ],
    [
      false,
      "4",
    ],
  ],
  Immutable.List [
    [
      true,
      "2",
    ],
    [
      false,
      "already_there",
    ],
  ],
]
`;

exports[`fixtures matrix-simple-1x1 1`] = `
Immutable.List [
  Immutable.List [
    [
      false,
      "2",
    ],
    [
      false,
      "4",
    ],
  ],
]
`;
